--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
   <h1>X1vova1X API</h1>
   <p>A simple API by X1vova1X</p>
-  <h2>API Endpoints</h2>
-  <p>Discord webhook message sender: /v1/webhook</p>
+  <h2>Endpoints:</h2>
+  <h3>Discord Webhook API</h3>
+  <p>Endpoint: /v1/webhook</p>
   <p>Example of using: GET https://x1vova1x.github.io/api/v1/webhook?content=Hello, world!&webhook=https://discord.com/api/webhooks/1234567890/abcdefghijklmnopqrstuvwxyz</p>
+  <a href="https://x1vova1x.github.io/api/v1/webhook">Open endpoint</a>
+  <h4>That's all for now!</h4>
 </body>
 </html>
