--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <p>Endpoint: /v1/webhook</p>
   <p>Example of using: GET https://x1vova1x.github.io/api/v1/webhook?content=Hello, world!&webhook=https://discord.com/api/webhooks/1234567890/abcdefghijklmnopqrstuvwxyz</p>
   <a href="https://x1vova1x.github.io/api/v1/webhook">Open endpoint</a>
+  <h3>Joke API</h3>
+  <p>Endpoint: /v1/joke</p>
+  <p>Example of using: GET https://x1vova1x.github.io/api/v1/joke</p>
+  <p>Note: No parameters in URL are required for Joke API</p>
+  <a href="https://x1vova1x.github.io/api/v1/joke">Open endpoint</a>
   <h4>That's all for now!</h4>
 </body>
 </html>
