--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <p>Example of using: GET https://x1vova1x.github.io/api/v1/joke</p>
   <p>Note: No parameters in URL are required for Joke API</p>
   <a href="https://x1vova1x.github.io/api/v1/joke">Open endpoint</a>
+  <p>The GET request gets the script, that you can run in your website using "eval" command in JS.</p>
   <h4>That's all for now!</h4>
 </body>
 </html>
