--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <p>Endpoint: /v1/webhook</p>
   <p>Example of using: GET https://x1vova1x.github.io/api/v1/webhook?content=Hello, world!&webhook=https://discord.com/api/webhooks/1234567890/abcdefghijklmnopqrstuvwxyz</p>
   <a href="https://x1vova1x.github.io/api/v1/webhook">Open endpoint</a>
+  <p>The GET request gets the script, that you can run in your website using "eval" command in JS.</p>
   <h3>Joke API</h3>
   <p>Endpoint: /v1/joke</p>
   <p>Example of using: GET https://x1vova1x.github.io/api/v1/joke</p>
